Amélioration de l'interface UX

--- a/templates/entreprise/show.html.twig
+++ b/templates/entreprise/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Sites | Inventaire{% endblock %}
+{% block title %}Gestion des sites{% endblock %}
 
 {% block body %}
     <div class="d-flex mb-4 mt-3">
@@ -13,7 +13,7 @@
                 <span class="bg-200 dark__bg-1100 pe-3">Sites</span>
                 <span class="border position-absolute top-50 translate-middle-y w-100 start-0 z-n1"></span>
             </h5>
-            <p class="mb-0">Cette page vous permet de voir tous les sites.</p>
+            <p class="mb-0">Cette page vous permet de gérer tous les sites.</p>
         </div>
     </div>
     <div class="row g-0">
@@ -26,27 +26,36 @@
             {% endfor %}
             <div class="sticky-sidebar">
                 <div class="card mb-3">
-                    <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Tous les sites</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.entreprise.add') }}">
-                            Ajouter
-                        </a>
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h5 class="mb-0">
+                            <span class="fas fa-building"></span>
+                            &nbsp;Gestion des sites
+                        </h5>
+                        <div>
+                            <a class="btn btn-primary btn-sm" href="{{ path('admin.entreprise.create') }}">
+                                <span class="fas fa-circle-plus"></span>
+                                &nbsp;Créer un site
+                            </a>
+                        </div>
                     </div>
                     <div class="card-body bg-light">
-                        <div id="table_entreprise" data-list='{"valueNames":["nom"],"page":20,"pagination":true}'>
+                        <div id="table_sites" data-list='{"page":20,"pagination":true}'>
                             <div class="row justify-content-end g-0">
-                                <div class="col-auto col-sm-5 mb-3">
+                                <div class="col-auto mb-3">
                                     <div class="input-group">
-                                        <input class="form-control form-control-sm shadow-none search" type="search" placeholder="Rechercher..." aria-label="search" pattern="-*" />
-                                        <div class="input-group-text bg-transparent">
-                                            <span class="fa fa-search fs--1 text-600"></span>
+                                        <div class="search-box">
+                                            <input id="searchInput" class="form-control search-input" type="search" placeholder="Rechercher..." aria-label="Rechercher" />
+                                            <span class="fas fa-search search-box-icon"></span>
+                                            <div class="btn-close-falcon-container position-absolute end-0 top-50 translate-middle" data-bs-dismiss="search">
+                                                <button class="btn btn-link btn-close-falcon p-0" id="btn-search-close" aria-label="Close"></button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="table-responsive scrollbar">
                                 <table class="table overflow-hidden">
-                                    <thead>
+                                    <thead class="bg-200 text-900">
                                         <tr>
                                             <th class="align-middle text-center">#</th>
                                             <th class="align-middle text-center">Nom</th>
@@ -58,7 +67,9 @@
                                             {% for entreprise in entreprises %}
                                                 <tr class="align-middle text-center">
                                                     <td class="text-nowrap">{{ loop.revindex }}</td>
-                                                    <td class="text-nowrap nom">{{ entreprise.nom }}</td>
+                                                    <td class="text-nowrap">
+                                                        <a href="{{ path('admin.entreprise.edit', {id: entreprise.id}) }}"><b>{{ entreprise.nom }}</b></a>
+                                                    </td>
                                                     <td class="text-nowrap">
                                                         <a href="{{ path('admin.entreprise.edit', {id: entreprise.id}) }}" class="btn btn-primary btn-sm">
                                                             <span class="bi bi-pencil-square"></span>
@@ -76,9 +87,12 @@
                                             {% endfor %}
                                         {% else %}
                                             <tr class="align-middle text-center">
-                                                <td colspan="5">Aucun site n'a été trouvé.</td>
+                                                <td colspan="3">Aucun site n'a été trouvé.</td>
                                             </tr>
                                         {% endif %}
+                                        <tr id="noResultsRow" class="align-middle text-center" style="display: none;">
+                                            <td colspan="3">Aucun site n'a été trouvé.</td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
@@ -97,4 +111,53 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        // Script pour la recherche dans le tableau
+        document.addEventListener('DOMContentLoaded', function() {
+            const searchBar = document.getElementById('searchInput');
+            const rows = document.querySelectorAll('.list tr');
+            const noResultsRow = document.getElementById('noResultsRow');
+            const btnCloseSearch = document.getElementById('btn-search-close');
+
+            searchBar.addEventListener('input', function(event) {
+                const searchTerm = event.target.value.toLowerCase();
+                let resultsFound = false;
+
+                rows.forEach(row => {
+                    const cells = row.querySelectorAll('td');
+                    let found = false;
+
+                    cells.forEach(cell => {
+                        if (cell.textContent.toLowerCase().includes(searchTerm)) {
+                            found = true;
+                        }
+                    });
+
+                    if (found) {
+                        row.style.display = '';
+                        resultsFound = true;
+                    } else {
+                        row.style.display = 'none';
+                    }
+
+                    if(btnCloseSearch) {
+                        btnCloseSearch.addEventListener('click', function() {
+                            searchBar.value = '';
+                            row.style.display = '';
+                            noResultsRow.style.display = 'none';
+                        });
+                    }
+                });
+
+                if (resultsFound) {
+                    noResultsRow.style.display = 'none';
+                } else {
+                    noResultsRow.style.display = '';
+                }
+            });
+        });
+    </script>
 {% endblock %}
