--- a/templates/stockage/show.html.twig
+++ b/templates/stockage/show.html.twig
@@ -28,7 +28,7 @@
                 <div class="card mb-3">
                     <div class="card-header d-flex flex-between-center">
                         <h5 class="mb-0">Tous les types de stockage</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.stockage.add') }}">
+                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.stockage.create') }}">
                             Ajouter
                         </a>
                     </div>
