--- a/templates/telephone_portable/edit.html.twig
+++ b/templates/telephone_portable/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Éditer le téléphone portable | Inventaire{% endblock %}
+{% block title %}Édition du téléphone portable{% endblock %}
 {% block stylesheets %}
     <link href="{{ asset('assets/vendors/flatpickr/flatpickr.min.css') }}" rel="stylesheet" />
     <link href="{{ asset('assets/vendors/select2/select2.min.css') }}" rel="stylesheet" />
@@ -32,9 +32,13 @@
             <div class="sticky-sidebar">
                 <div class="card mb-3">
                     <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Éditer un téléphone portable</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.telephone_portable.show') }}">
-                            Retour
+                        <h5 class="mb-0">
+                            <span class="fas fa-edit"></span>
+                            &nbsp;Édition d'un téléphone portable
+                        </h5>
+                        <a class="btn btn-primary btn-sm" href="{{ path('admin.telephone_portable.show') }}">
+                            <span class="fas fa-circle-left"></span>
+                            &nbsp;Retour
                         </a>
                     </div>
                     <div class="card-body bg-light">
@@ -58,7 +62,7 @@
                                 Champs obligatoires
                             </label>
                             <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary me-1 mb-1" type="submit">Éditer</button>
+                                <button class="btn btn-primary me-1 mb-1" type="submit">Sauvegarder</button>
                             </div>
                         {{ form_end(telephoneForm) }}
                     </div>
