--- a/templates/ecran/show.html.twig
+++ b/templates/ecran/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Écrans | Inventaire{% endblock %}
+{% block title %}Gestion des écrans{% endblock %}
 
 {% block body %}
     <div class="d-flex mb-4 mt-3">
@@ -13,7 +13,7 @@
                 <span class="bg-200 dark__bg-1100 pe-3">Écrans</span>
                 <span class="border position-absolute top-50 translate-middle-y w-100 start-0 z-n1"></span>
             </h5>
-            <p class="mb-0">Cette page vous permet de voir tous les écrans.</p>
+            <p class="mb-0">Cette page vous permet de gérer tous les écrans.</p>
         </div>
     </div>
     <div class="row g-0">
@@ -32,27 +32,36 @@
             {% endfor %}
             <div class="sticky-sidebar">
                 <div class="card mb-3">
-                    <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Tous les écrans</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.ecran.add') }}">
-                            Ajouter
-                        </a>
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h5 class="mb-0">
+                            <span class="fas fa-display"></span>
+                            &nbsp;Gestion des écrans
+                        </h5>
+                        <div>
+                            <a class="btn btn-primary btn-sm me-2" href="{{ path('admin.ecran.create') }}">
+                                <span class="fas fa-circle-plus"></span>
+                                &nbsp;Créer un écran
+                            </a>
+                            {% if ecrans | length != 0 %}
+                                <a class="btn btn-primary btn-sm me-2" href="{{ path('admin.ecran.export') }}">
+                                    <span class="fas fa-file-export"></span>
+                                    &nbsp;Exporter
+                                </a>
+                            {% endif %}
+                        </div>
                     </div>
                     <div class="card-body bg-light">
-                        <div id="table_ecrans" data-list='{"valueNames":["nom","marque","modele","utilisateur","emplacement","site","fournisseur","numero_serie","date_installation","date_achat","date_garantie","etat","commentaire"],"page":20,"pagination":true}'>
+                        <div id="table_ecrans" data-list='{"page":20,"pagination":true}'>
                             <div class="row justify-content-end g-0">
-                                <div class="col-auto col-sm-5 mb-3">
+                                <div class="col-auto mb-3">
                                     <div class="input-group">
-                                        <input class="form-control form-control-sm shadow-none search" type="search" placeholder="Rechercher..." aria-label="search" pattern=".*" />
-                                        <div class="input-group-text bg-transparent">
-                                            <span class="fa fa-search fs--1 text-600"></span>
+                                        <div class="search-box">
+                                            <input id="searchInput" class="form-control search-input" type="search" placeholder="Rechercher..." aria-label="Rechercher" />
+                                            <span class="fas fa-search search-box-icon"></span>
+                                            <div class="btn-close-falcon-container position-absolute end-0 top-50 translate-middle" data-bs-dismiss="search">
+                                                <button class="btn btn-link btn-close-falcon p-0" id="btn-search-close" aria-label="Close"></button>
+                                            </div>
                                         </div>
-                                        {% if ecrans | length != 0 %}
-                                            &nbsp;&nbsp;
-                                            <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.ecran.export') }}">
-                                                Exporter
-                                            </a>
-                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -61,15 +70,11 @@
                                     <thead class="bg-200 text-900">
                                         <tr>
                                             <th class="align-middle text-center">#</th>
-                                            <th class="align-middle text-center" data-sort="nom">Nom</th>
-                                            <th class="align-middle text-center">Marque</th>
-                                            <th class="align-middle text-center">Modèle</th>
-                                            <th class="align-middle text-center">Utilisateur</th>
+                                            <th class="align-middle text-center">Nom</th>
+                                            <th class="align-middle text-center">Numéro de série</th>
                                             <th class="align-middle text-center">Emplacement</th>
                                             <th class="align-middle text-center">Site</th>
-                                            <th class="align-middle text-center">Fournisseur</th>
-                                            <th class="align-middle text-center">Numéro de série</th>
-                                            <th class="align-middle text-center">État</th>
+                                            <th class="align-middle text-center">Utilisateur</th>
                                             <th class="align-middle text-center">Date d'installation</th>
                                             <th class="align-middle text-center">Date d'achat</th>
                                             <th class="align-middle text-center">Date de garantie</th>
@@ -81,91 +86,37 @@
                                         {% if ecrans | length != 0 %}
                                             {% for ecran in ecrans %}
                                                 <tr class="align-middle text-center">
-                                                    <td class="text-nowrap">{{ loop.revindex }}</td>
-                                                    <td class="text-nowrap nom">{{ ecran.nom }}</td>
-                                                    <td class="text-nowrap marque">
-                                                        {% if ecran.marque != null %}
-                                                            {{ ecran.marque }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ loop.revindex }}
                                                     </td>
-                                                    <td class="text-nowrap modele">
-                                                        {% if ecran.modele != null %}
-                                                            {{ ecran.modele }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        <a href="{{ path('admin.ecran.edit', {id: ecran.id}) }}">
+                                                            <b>{{ ecran.nom }}</b>
+                                                        </a>
                                                     </td>
-                                                    <td class="text-nowrap utilisateur">
-                                                        {% if ecran.getUtilisateur != null %}
-                                                            {{ ecran.getUtilisateur.nom }} {{ ecran.getUtilisateur.prenom }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ ecran.numeroSerie | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap emplacement">
-                                                        {% if ecran.getEmplacement != null %}
-                                                            {{ ecran.getEmplacement.nom }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ ecran.getEmplacement.nom | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap site">
-                                                        {% if ecran.getEntreprise != null %}
-                                                            {{ ecran.getEntreprise.nom }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ ecran.getEntreprise.nom | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap fournisseur">
-                                                        {% if ecran.getFournisseur != null %}
-                                                            {{ ecran.getFournisseur.nom }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ (ecran.getUtilisateur.nom | default('<span class="badge bg-danger">N/A</span>') ~ ' ' ~ ecran.getUtilisateur.prenom | default('')) | raw }}
                                                     </td>
-                                                    <td class="text-nowrap numero_serie">
-                                                        {% if ecran.numeroSerie != null %}
-                                                            {{ ecran.numeroSerie }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ ecran.dateInstallation | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap etat">
-                                                        {% if ecran.getEtat != null %}
-                                                            {{ ecran.getEtat.nom }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ ecran.dateAchat | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap date_installation">
-                                                        {% if ecran.dateInstallation != null %}
-                                                            {{ ecran.dateInstallation }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ ecran.dateGarantie | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap date_achat">
-                                                        {% if ecran.dateAchat != null %}
-                                                            {{ ecran.dateAchat }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
-                                                    </td>
-                                                    <td class="text-nowrap date_garantie">
-                                                        {% if ecran.dateGarantie != null %}
-                                                            {{ ecran.dateGarantie }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
-                                                    </td>
-                                                    <td class="text-nowrap commentaire">
-                                                        {% if ecran.commentaire != null %}
-                                                            {{ ecran.commentaire }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ ecran.commentaire | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
                                                     <td class="text-nowrap">
                                                         <a href="{{ path('admin.ecran.edit', {id: ecran.id}) }}" class="btn btn-primary btn-sm">
@@ -184,9 +135,12 @@
                                             {% endfor %}
                                         {% else %}
                                             <tr class="align-middle text-center">
-                                                <td colspan="12">Aucun écran n'a été trouvé.</td>
+                                                <td colspan="10">Aucun écran n'a été trouvé.</td>
                                             </tr>
                                         {% endif %}
+                                        <tr id="noResultsRow" class="align-middle text-center" style="display: none;">
+                                            <td colspan="10">Aucun écran n'a été trouvé.</td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
@@ -205,4 +159,53 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        // Script pour la recherche dans le tableau
+        document.addEventListener('DOMContentLoaded', function() {
+            const searchBar = document.getElementById('searchInput');
+            const rows = document.querySelectorAll('.list tr');
+            const noResultsRow = document.getElementById('noResultsRow');
+            const btnCloseSearch = document.getElementById('btn-search-close');
+
+            searchBar.addEventListener('input', function(event) {
+                const searchTerm = event.target.value.toLowerCase();
+                let resultsFound = false;
+
+                rows.forEach(row => {
+                    const cells = row.querySelectorAll('td');
+                    let found = false;
+
+                    cells.forEach(cell => {
+                        if (cell.textContent.toLowerCase().includes(searchTerm)) {
+                            found = true;
+                        }
+                    });
+
+                    if (found) {
+                        row.style.display = '';
+                        resultsFound = true;
+                    } else {
+                        row.style.display = 'none';
+                    }
+
+                    if(btnCloseSearch) {
+                        btnCloseSearch.addEventListener('click', function() {
+                            searchBar.value = '';
+                            row.style.display = '';
+                            noResultsRow.style.display = 'none';
+                        });
+                    }
+                });
+
+                if (resultsFound) {
+                    noResultsRow.style.display = 'none';
+                } else {
+                    noResultsRow.style.display = '';
+                }
+            });
+        });
+    </script>
 {% endblock %}
