--- a/templates/entreprise/edit.html.twig
+++ b/templates/entreprise/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Éditer le site | Inventaire{% endblock %}
+{% block title %}Édition du site{% endblock %}
 
 {% block body %}
     <div class="d-flex mb-4 mt-3">
@@ -27,9 +27,13 @@
             <div class="sticky-sidebar">
                 <div class="card mb-3">
                     <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Éditer un site</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.entreprise.show') }}">
-                            Retour
+                        <h5 class="mb-0">
+                            <span class="fas fa-edit"></span>
+                            &nbsp;Édition un site
+                        </h5>
+                        <a class="btn btn-primary btn-sm" href="{{ path('admin.entreprise.show') }}">
+                            <span class="fas fa-circle-left"></span>
+                            &nbsp;Retour
                         </a>
                     </div>
                     <div class="card-body bg-light">
@@ -40,7 +44,7 @@
                                 Champs obligatoires
                             </label>
                             <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary me-1 mb-1" type="submit">Éditer</button>
+                                <button class="btn btn-primary me-1 mb-1" type="submit">Sauvegarder</button>
                             </div>
                         {{ form_end(entrepriseForm) }}
                     </div>
