--- a/templates/etat/create.html.twig
+++ b/templates/etat/create.html.twig
@@ -1,19 +1,19 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Ajouter un fournisseur | Inventaire{% endblock %}
+{% block title %}Création d'un état{% endblock %}
 
 {% block body %}
     <div class="d-flex mb-4 mt-3">
         <span class="fa-stack me-2 ms-n1">
             <i class="fas fa-circle fa-stack text-300"></i>
-            <i class="fa-inverse fa-stack-1x text-danger fas fa-truck"></i>
+            <i class="fa-inverse fa-stack-1x text-danger fas fa-circle-info"></i>
         </span>
         <div class="col">
             <h5 class="mb-0 text-danger position-relative">
-                <span class="bg-200 dark__bg-1100 pe-3">Fournisseurs</span>
+                <span class="bg-200 dark__bg-1100 pe-3">États</span>
                 <span class="border position-absolute top-50 translate-middle-y w-100 start-0 z-n1"></span>
             </h5>
-            <p class="mb-0">Cette page vous permet d'ajouter un fournisseur.</p>
+            <p class="mb-0">Cette page vous permet de créer un état.</p>
         </div>
     </div>
     <div class="row g-0">
@@ -27,22 +27,26 @@
             <div class="sticky-sidebar">
                 <div class="card mb-3">
                     <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Ajouter un fournisseur</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.fournisseur.show') }}">
-                            Retour
+                        <h5 class="mb-0">
+                            <span class="fas fa-circle-plus"></span>
+                            &nbsp;Création d'un état
+                        </h5>
+                        <a class="btn btn-primary btn-sm" href="{{ path('admin.etat.show') }}">
+                            <span class="fas fa-circle-left"></span>
+                            &nbsp;Retour
                         </a>
                     </div>
                     <div class="card-body bg-light">
-                        {{ form_start(fournisseurForm) }}
-                            {{ form_row(fournisseurForm.nom) }}
+                        {{ form_start(etatForm) }}
+                            {{ form_row(etatForm.nom) }}
                             <label class="fw-medium">
                                 <a style="color: red">*</a>
                                 Champs obligatoires
                             </label>
                             <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary me-1 mb-1" type="submit">Créer</button>
+                                <button class="btn btn-primary me-1 mb-1" type="submit">Sauvegarder</button>
                             </div>
-                        {{ form_end(fournisseurForm) }}
+                        {{ form_end(etatForm) }}
                     </div>
                 </div>
             </div>
