--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,7 +20,7 @@
         <div class="col-lg-6 pe-lg-2">
             <div class="card mb-3">
                 <div class="card-header">
-                    <h5 class="mb-0">Statitiques du matériel</h5>
+                    <h5 class="mb-0">Statistiques du matériel</h5>
                 </div>
                 <div class="card-body bg-light">
                     <div class="echart-doughnut-rounded-chart-materiel" style="min-height: 250px;" data-echart-responsive="true"></div>
