--- a/templates/imprimante/show.html.twig
+++ b/templates/imprimante/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'gui/base.html.twig' %}
 
-{% block title %}Imprimantes | Inventaire{% endblock %}
+{% block title %}Gestion des imprimantes{% endblock %}
 
 {% block body %}
     <div class="d-flex mb-4 mt-3">
@@ -13,7 +13,7 @@
                 <span class="bg-200 dark__bg-1100 pe-3">Imprimantes</span>
                 <span class="border position-absolute top-50 translate-middle-y w-100 start-0 z-n1"></span>
             </h5>
-            <p class="mb-0">Cette page vous permet de voir toutes les imprimantes.</p>
+            <p class="mb-0">Cette page vous permet de gérer toutes les imprimantes.</p>
         </div>
     </div>
     <div class="row g-0">
@@ -32,27 +32,36 @@
             {% endfor %}
             <div class="sticky-sidebar">
                 <div class="card mb-3">
-                    <div class="card-header d-flex flex-between-center">
-                        <h5 class="mb-0">Toutes les imprimantes</h5>
-                        <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.imprimante.add') }}">
-                            Ajouter
-                        </a>
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h5 class="mb-0">
+                            <span class="fas fa-print"></span>
+                            &nbsp;Gestion des imprimantes
+                        </h5>
+                        <div>
+                            <a class="btn btn-primary btn-sm me-2" href="{{ path('admin.imprimante.create') }}">
+                                <span class="fas fa-circle-plus"></span>
+                                &nbsp;Créer une imprimante
+                            </a>
+                            {% if imprimantes | length != 0 %}
+                                <a class="btn btn-primary btn-sm me-2" href="{{ path('admin.imprimante.export') }}">
+                                    <span class="fas fa-file-export"></span>
+                                    &nbsp;Exporter
+                                </a>
+                            {% endif %}
+                        </div>
                     </div>
                     <div class="card-body bg-light">
-                        <div id="table_imprimante" data-list='{"valueNames":["nom","marque","modele","ip","contrat","site","fournisseur","numero_serie","date_installation","date_achat","date_garantie","etat","commentaire"],"page":20,"pagination":true}'>
+                        <div id="table_imprimantes" data-list='{"page":20,"pagination":true}'>
                             <div class="row justify-content-end g-0">
-                                <div class="col-auto col-sm-5 mb-3">
+                                <div class="col-auto mb-3">
                                     <div class="input-group">
-                                        <input class="form-control form-control-sm shadow-none search" type="search" placeholder="Rechercher..." aria-label="search" pattern=".*" />
-                                        <div class="input-group-text bg-transparent">
-                                            <span class="fa fa-search fs--1 text-600"></span>
+                                        <div class="search-box">
+                                            <input id="searchInput" class="form-control search-input" type="search" placeholder="Rechercher..." aria-label="Rechercher" />
+                                            <span class="fas fa-search search-box-icon"></span>
+                                            <div class="btn-close-falcon-container position-absolute end-0 top-50 translate-middle" data-bs-dismiss="search">
+                                                <button class="btn btn-link btn-close-falcon p-0" id="btn-search-close" aria-label="Close"></button>
+                                            </div>
                                         </div>
-                                        {% if imprimantes | length != 0 %}
-                                            &nbsp;&nbsp;
-                                            <a class="btn btn-falcon-default btn-sm" href="{{ path('admin.imprimante.export') }}">
-                                                Exporter
-                                            </a>
-                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
@@ -62,14 +71,10 @@
                                         <tr>
                                             <th class="align-middle text-center">#</th>
                                             <th class="align-middle text-center">Nom</th>
-                                            <th class="align-middle text-center">Marque</th>
-                                            <th class="align-middle text-center">Modèle</th>
                                             <th class="align-middle text-center">IP</th>
                                             <th class="align-middle text-center">Numéro de série</th>
                                             <th class="align-middle text-center">Emplacement</th>
                                             <th class="align-middle text-center">Site</th>
-                                            <th class="align-middle text-center">Fournisseur</th>
-                                            <th class="align-middle text-center">État</th>
                                             <th class="align-middle text-center">Contrat</th>
                                             <th class="align-middle text-center">Date d'installation</th>
                                             <th class="align-middle text-center">Date d'achat</th>
@@ -83,103 +88,41 @@
                                             {% for imprimante in imprimantes %}
                                                 <tr class="align-middle text-center">
                                                     <td class="text-nowrap">{{ loop.revindex }}</td>
-                                                    <td class="text-nowrap nom">
-                                                        {% if imprimante.nom != null %}
-                                                            {{ imprimante.nom }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        <a href="{{ path('admin.imprimante.edit', {id: imprimante.id}) }}">
+                                                            <b>{{ imprimante.nom }}</b>
+                                                        </a>
                                                     </td>
-                                                    <td class="text-nowrap marque">
-                                                        {% if imprimante.marque != null %}
-                                                            {{ imprimante.marque }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ imprimante.ip | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap modele">
-                                                        {% if imprimante.modele != null %}
-                                                            {{ imprimante.modele }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ imprimante.numeroSerie | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap ip">
-                                                        {% if imprimante.ip != null %}
-                                                            {{ imprimante.ip }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ imprimante.getEmplacement.nom | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap numero_serie">
-                                                        {% if imprimante.numeroSerie != null %}
-                                                            {{ imprimante.numeroSerie }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ imprimante.getEntreprise.nom | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap emplacement">
-                                                        {% if imprimante.getEmplacement != null %}
-                                                            {{ imprimante.getEmplacement.nom }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
-                                                    </td>
-                                                    <td class="text-nowrap site">
-                                                        {% if imprimante.getEntreprise != null %}
-                                                            {{ imprimante.getEntreprise.nom }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
-                                                    </td>
-                                                    <td class="text-nowrap fournisseur">
-                                                        {% if imprimante.getFournisseur != null %}
-                                                            {{ imprimante.getFournisseur.nom }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
-                                                    </td>
-                                                    <td class="text-nowrap etat">
-                                                        {% if imprimante.getEtat != null %}
-                                                            {{ imprimante.getEtat.nom }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
-                                                    </td>
-                                                    <td class="text-nowrap contrat">
+                                                    <td class="text-nowrap">
                                                         {% if imprimante.contrat == 1 %}
-                                                            <span class="badge text-bg-success">Oui</span>
+                                                            <span class="badge bg-success">Oui</span>
                                                         {% else %}
-                                                            <span class="badge text-bg-danger">Non</span>
+                                                            <span class="badge bg-danger">Non</span>
                                                         {% endif %}
                                                     </td>
-                                                    <td class="text-nowrap date_installation">
-                                                        {% if imprimante.dateInstallation != null %}
-                                                            {{ imprimante.dateInstallation }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ imprimante.dateInstallation | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap date_achat">
-                                                        {% if imprimante.dateAchat != null %}
-                                                            {{ imprimante.dateAchat }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ imprimante.dateAchat | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap date_garantie">
-                                                        {% if imprimante.dateGarantie != null %}
-                                                            {{ imprimante.dateGarantie }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ imprimante.dateGarantie | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
-                                                    <td class="text-nowrap commentaire">
-                                                        {% if imprimante.commentaire != null %}
-                                                            {{ imprimante.commentaire }}
-                                                        {% else %}
-                                                            <span class="badge text-bg-danger">N/A</span>
-                                                        {% endif %}
+                                                    <td class="text-nowrap">
+                                                        {{ imprimante.commentaire | default('<span class="badge bg-danger">N/A</span>') | raw }}
                                                     </td>
                                                     <td class="text-nowrap">
                                                         <a href="{{ path('admin.imprimante.edit', {id: imprimante.id}) }}" class="btn btn-primary btn-sm">
@@ -198,9 +141,12 @@
                                             {% endfor %}
                                         {% else %}
                                             <tr class="align-middle text-center">
-                                                <td colspan="12">Aucune imprimante n'a été trouvé.</td>
+                                                <td colspan="12">Aucune imprimante n'a été trouvée.</td>
                                             </tr>
                                         {% endif %}
+                                        <tr id="noResultsRow" class="align-middle text-center" style="display: none;">
+                                            <td colspan="12">Aucune imprimante n'a été trouvée.</td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
@@ -219,4 +165,53 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script>
+        // Script pour la recherche dans le tableau
+        document.addEventListener('DOMContentLoaded', function() {
+            const searchBar = document.getElementById('searchInput');
+            const rows = document.querySelectorAll('.list tr');
+            const noResultsRow = document.getElementById('noResultsRow');
+            const btnCloseSearch = document.getElementById('btn-search-close');
+
+            searchBar.addEventListener('input', function(event) {
+                const searchTerm = event.target.value.toLowerCase();
+                let resultsFound = false;
+
+                rows.forEach(row => {
+                    const cells = row.querySelectorAll('td');
+                    let found = false;
+
+                    cells.forEach(cell => {
+                        if (cell.textContent.toLowerCase().includes(searchTerm)) {
+                            found = true;
+                        }
+                    });
+
+                    if (found) {
+                        row.style.display = '';
+                        resultsFound = true;
+                    } else {
+                        row.style.display = 'none';
+                    }
+
+                    if(btnCloseSearch) {
+                        btnCloseSearch.addEventListener('click', function() {
+                            searchBar.value = '';
+                            row.style.display = '';
+                            noResultsRow.style.display = 'none';
+                        });
+                    }
+                });
+
+                if (resultsFound) {
+                    noResultsRow.style.display = 'none';
+                } else {
+                    noResultsRow.style.display = '';
+                }
+            });
+        });
+    </script>
 {% endblock %}
